# ai_village

./: README.md  pyproject.toml  temp.ipynb
